--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <meta name="description" content="A developer portfolio website for a MERN stack developer showcasing their projects and skills." />
     <meta name="keywords" content="MERN stack, developer, portfolio, web development, full-stack, React, MongoDB, Express, Node.js" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="C:\Users\user\Downloads\my-app\public/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 
