--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="A developer portfolio website for a MERN stack developer showcasing their projects and skills." />
     <meta name="keywords" content="MERN stack, developer, portfolio, web development, full-stack, React, MongoDB, Express, Node.js" />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
@@ -39,6 +39,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
