--- a/index.html
+++ b/index.html
@@ -7,34 +7,16 @@
       content="width=device-width, initial-scale=1.0"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A developer portfolio website for a MERN stack developer showcasing their projects and skills." />
-    <meta name="keywords" content="MERN stack, developer, portfolio, web development, full-stack, React, MongoDB, Express, Node.js" />
+    <meta name="description" content="A developer portfolio website for a full-stack developer showcasing their projects and skills." />
+    <meta name="keywords" content="MERN stack, developer, portfolio, software developer, web development, full-stack, React, MongoDB, Express, Node.js, wordpress, webflow, wix, asp.net core, sql, typescript, javascript, python, django, fastapi, framer, app developer, mobile app developer, reactnative, c#, csharp, programmer, top developer, best programmer" />
     <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-
     <link rel="manifest" href="/manifest.json" />
     <link rel="shortcut icon" href="C:\Users\user\Downloads\my-app\public/favicon.ico" />
- 
-
-    <title>MERN Stack Developer | Portfolio Website</title>
+    <title>Software Developer | Portfolio Website</title>
    
-    
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   </head>
 
   <body>
